# sarah-build-pack

./: .env.example  .gitignore  README.md  bootstrap.sh
cron/: README.md  capacity-snapshot.sh  cleanup-tmp.sh  expire-sessions.sh  install-cron.sh
docs/: 01-token-window.md  02-battlestation.md  03-token-matrix.md  04-sage-protocols.md
hooks/: auto-register.sh  build-ledger.sh  engine-tracker.sh  file-lock-check.sh  generate-briefing.py  install.sh  loop-guard.sh  spend-guard.sh  token-tracker.sh  wire-inbox.sh
lanes/: accounts.sh
lib/: atomic.sh  config.sh  directives.sh  hook-gate.sh  log.sh  route.py  session-guard.sh  session.sh  supabase.sh  wire-daemon.py  wire.sh
schema/: provision.sql
templates/: accounts.json  token-budget.json
tests/: test_route.py
token-watch/: advisor_plan.py  dispatch_grid.py  pyproject.toml  token-watch  token_watch.py  token_watch_advisor.py  token_watch_data.py  token_watch_tui.py  token_watch_tui.tcss
